...
  return (
    <Modal
      animationType="slide"
      visible={isVisible}
      presentationStyle="pageSheet"
    >
      <View testID="linkend_modal">
        {!isLoading ? (
          <View className="h-14 w-full justify-center border-b-2 border-gray-light bg-gray-veryLight pl-6">
            <NavButton
              text={t("cancel") || "Cancel"}
              textClassName="text-blue-500 text-lg"
              onPress={onLoginCancel}
              testID="linkedln_modal_cancel_btn"
            />
          </View>
        ) : null}
        <View
          style={{
            backgroundColor: "red",
...
