...
  };

  return (
    <View
      className="flex-1 bg-white"
      // style={{ borderRadius: 10 }}
      testID="register_modal"
    >
      <View className="absolute z-10 my-5 pl-4">
        <NavButton
          onPress={() => {
            closeModal();
          }}
          text={t("button.back") as string}
          withBackIcon
          testID="register_modal_back_btn"
        />
      </View>
      <SafeAreaView className="flex flex-1 items-center">
        <CustomActivityIndicator isVisible={isLoading} />
        <View
          className="h-full w-full flex-1 p-5"
...
